force-app/main/default/objects/Service_of_Process__c/fields/Capacity_of_Person_Served__c.field-meta.xml
<CustomField>
    <fullName>Capacity_of_Person_Served__c</fullName>
    <label>Capacity of Person Served</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Defendant</fullName>
            </value>
            <value>
                <fullName>Agent for Service of Process</fullName>
            </value>
            <value>
                <fullName>Executive</fullName>
            </value>
            <value>
                <fullName>Manager</fullName>
            </value>
            <value>
                <fullName>Person Apparently in Charge</fullName>
            </value>
            <value>
                <fullName>Respondent</fullName>
            </value>
            <value>
                <fullName>Judgment Debtor</fullName>
            </value>
            <value>
                <fullName>Plaintiff</fullName>
            </value>
            <value>
                <fullName>Garnishee</fullName>
            </value>
            <value>
                <fullName>Attorney for Defendant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>