force-app/main/default/objects/Service_of_Process__c/fields/Cost_of_Service__c.field-meta.xml
<CustomField>
    <fullName>Cost_of_Service__c</fullName>
    <description>When Professional Process Server = True</description>
    <inlineHelpText>Costs paid to process server</inlineHelpText>
    <label>Cost of Service</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>