force-app/main/default/objects/Service_of_Process__c/fields/Escrow_Pay_Off_Demand__c.field-meta.xml
<CustomField>
    <fullName>Escrow_Pay_Off_Demand__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Escrow/Pay-Off Demand</label>
    <referenceTo>Escrow_Pay_Off_Demand__c</referenceTo>
    <relationshipLabel>Service of Processes</relationshipLabel>
    <relationshipName>Service_of_Processes</relationshipName>
    <type>Lookup</type>
</CustomField>