force-app/main/default/objects/Service_of_Process__c/fields/Levy__c.field-meta.xml
<CustomField>
    <fullName>Levy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Levy</label>
    <referenceTo>Levy__c</referenceTo>
    <relationshipLabel>Service of Processes</relationshipLabel>
    <relationshipName>Service_of_Processes</relationshipName>
    <type>Lookup</type>
</CustomField>