force-app/main/default/objects/Service_of_Process__c/fields/Lien__c.field-meta.xml
<CustomField>
    <fullName>Lien__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lien</label>
    <referenceTo>Lien__c</referenceTo>
    <relationshipLabel>Service of Processes</relationshipLabel>
    <relationshipName>Service_of_Processes</relationshipName>
    <type>Lookup</type>
</CustomField>