force-app/main/default/objects/Service_of_Process__c/fields/Party_Served__c.field-meta.xml
<CustomField>
    <fullName>Party_Served__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Party Served</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Service of Processes</relationshipLabel>
    <relationshipName>Service_of_Processes</relationshipName>
    <type>Lookup</type>
</CustomField>