force-app/main/default/objects/Service_of_Process__c/fields/Served_By__c.field-meta.xml
<CustomField>
    <fullName>Served_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Refers to Users, Default = Current User</description>
    <label>Served By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Service_of_Processes</relationshipName>
    <type>Lookup</type>
</CustomField>