force-app/main/default/objects/Service_of_Process__c/fields/Substituted_Service_Date_Copy_Mailed__c.field-meta.xml
<CustomField>
    <fullName>Substituted_Service_Date_Copy_Mailed__c</fullName>
    <description>Only if Type of Service = Substituted Service</description>
    <label>Substituted Service - Date Copy Mailed</label>
    <type>Date</type>
</CustomField>