force-app/main/default/objects/Service_of_Process__c/fields/Substituted_Service_Name_of_on_Envelope__c.field-meta.xml
<CustomField>
    <fullName>Substituted_Service_Name_of_on_Envelope__c</fullName>
    <description>Default value = Name of Person Served</description>
    <label>Substituted Service-Name of on Envelope</label>
    <length>50</length>
    <type>Text</type>
</CustomField>