force-app/main/default/objects/Service_of_Process__c/recordTypes/Overnight_Express_Delivery.recordType-meta.xml
<RecordType>
    <fullName>Overnight_Express_Delivery</fullName>
    <active>true</active>
    <label>Overnight/Express Delivery</label>
</RecordType>