force-app/main/default/objects/Service_of_Process__c/recordTypes/Registered_Certified_Mail.recordType-meta.xml
<RecordType>
    <fullName>Registered_Certified_Mail</fullName>
    <active>true</active>
    <label>Registered\Certified Mail</label>
</RecordType>