force-app/main/default/objects/Service_of_Process__c/recordTypes/US_Mail.recordType-meta.xml
<RecordType>
    <fullName>US_Mail</fullName>
    <active>true</active>
    <label>US Mail</label>
</RecordType>